--- a/login.css
+++ b/login.css
@@ -14,6 +14,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
 
 .marque {
@@ -42,15 +43,15 @@ main{
     margin: 40px auto;
 }
 .se_connecter img {
-    width: 400px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     
 }
 .cover_box{
     position: relative;
-    width: 400px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
