--- a/panier.css
+++ b/panier.css
@@ -479,3 +479,104 @@ footer{  background:linear-gradient(#efece7,#4a6e43 );
         padding: 30px;
         margin: 0;
     }
+
+
+    @media screen and (max-width: 768px) {
+        .container {
+            flex-direction: column;
+            align-items: center;
+        }
+        .sidebar {
+            width: 90%;
+            margin: 0;
+        }
+        #root {
+            width: 90%;
+            grid-template-columns: 1fr;
+        }
+        .header{
+            width: 90%;
+        }
+        .cart{
+            width: 90%;
+        }
+        .cart-item{
+            width: 90%;
+        }
+        .box{
+            width: 90%;
+        }
+        .img-box{
+            width: 100%;
+        }
+        .images{
+            width: 100%;
+            height: 100%;
+        }
+        .row-img{
+            width: 40px;
+            height: 40px;
+        }
+        .rowimg{
+            max-width: 30px;
+            max-height: 30px;
+        }
+        .bottom{
+            width: 90%;
+        }
+        .foot{
+            width: 90%;
+        }
+        .logo{
+            width: 90%;
+        }
+        .premier{
+            width: 90%;
+        }
+        .deuxieme{
+            width: 90%;
+        }
+        .footer-section img{
+            max-width: 30px;
+        }
+        .h {
+            font-size: 1.5rem;
+        }
+        .fa-square-x-twitter {
+            font-size: 20px;
+        }
+        .fa-square-instagram{
+            font-size: 20px;
+        }
+        .fa-facebook{
+            font-size: 20px;
+        }
+        .fa-square-whatsapp{
+            font-size: 20px;
+        }
+        .logo{
+            gap: 20px;
+        }
+        .logo_nom img {
+            max-width: 200px;
+        }
+        .logo_nom {
+            margin: 0;
+        }
+        .logo_nom h3 {
+            font-size: 1.5rem;
+        }
+        .logo_nom p {
+            font-size: 1rem;
+        }
+        .copy {
+            font-size: 1rem;
+        }
+        .copy p {
+            font-size: 1rem;
+        }
+        .copy h3 {
+            font-size: 1.5rem;
+        }
+        
+    }
