--- a/panier.css
+++ b/panier.css
@@ -483,9 +483,11 @@ footer{  background:linear-gradient(#efece7,#4a6e43 );
 
     @media screen and (max-width: 768px) {
         .container {
-            flex-direction: column;
-            align-items: center;
-            flex-wrap: wrap;
+            width: 90%;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 10px;
+            margin-top: 70px;
         }
         .sidebar {
             width: 40%;
