--- a/panier.css
+++ b/panier.css
@@ -487,6 +487,7 @@ footer{  background:linear-gradient(#efece7,#4a6e43 );
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             margin-top: 70px;
+           gap: 20px;
         }
         .sidebar {
             width: 40%;
